--- a/Acme.ProductManagement/packages.config
+++ b/Acme.ProductManagement/packages.config
@@ -3,6 +3,7 @@
   <package id="angularjs" version="1.5.0" targetFramework="net452" />
   <package id="AngularJS.Core" version="1.5.0" targetFramework="net452" />
   <package id="AngularJS.Resource" version="1.5.0" targetFramework="net452" />
+  <package id="Angular-UI-Router" version="0.2.8.0" targetFramework="net452" />
   <package id="bootstrap" version="3.3.6" targetFramework="net452" />
   <package id="jQuery" version="1.9.1" targetFramework="net452" />
 </packages>
