--- a/Acme.ProductManagement/packages.config
+++ b/Acme.ProductManagement/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Angular.UI.Utils" version="0.2.3" targetFramework="net452" />
   <package id="angularjs" version="1.5.0" targetFramework="net452" />
   <package id="AngularJS.Core" version="1.5.0" targetFramework="net452" />
   <package id="AngularJS.Resource" version="1.5.0" targetFramework="net452" />
